[package]
name = "demo_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
memmap2 = "0.9"
source2-demo = { version = "0.3.2", features = ["cs2"] }
prost = "0.12"
postgres = "0.19"
chrono = "0.4"
thiserror = "1.0"

[profile.dev]
panic = "unwind"
lto = true
codegen-units = 1

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1